<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="79dp"
            android:layout_height="45dp"
            android:text="@string/from"
            android:textColor="@android:color/black"
            android:textSize="20sp">

        </TextView>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="317dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/nothing" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="79dp"
            android:layout_height="45dp"
            android:text="@string/to"
            android:textColor="@android:color/black"
            android:textSize="20sp">

        </TextView>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="317dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/nothing" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="79dp"
            android:layout_height="45dp"
            android:text="@string/subject"
            android:textColor="@android:color/black"
            android:textSize="20sp">

        </TextView>

        <EditText
            android:id="@+id/editText"
            android:layout_width="317dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/nothing" />

    </LinearLayout>

    <EditText
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/compose"
        android:textSize="16sp" />

</LinearLayout>
